examples/programs/invalid/cap_multiple_measure.sst
.version 1
; Two measure instructions — requires feed_forward capability.
; Should fail when arch spec has feed_forward = false (default).
; LocationAddr (64-bit): [zone_id:8][word_id:16][site_id:16][pad:24]

const_loc 0x0000000000000000    ; zone 0, word 0, site 0
const_loc 0x0000000001000000    ; zone 0, word 0, site 1
initial_fill 2

const_zone 0x00000000
measure 1
await_measure

; Second measure is not allowed without feed_forward
const_zone 0x00000000
measure 1
await_measure

return
halt
